--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,10 @@
 title: My GitHub Pages Site
 description: >- # this means to ignore newlines until "baseurl:"
   Welcome to my GitHub Pages site.
-theme: jekyll-theme-cayman
+remote_theme: pages-themes/cayman@v0.2.0
+plugins:
+  - jekyll-remote-theme
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "https://jboychuk055.github.io/coursera-test" # the base hostname & protocol for your site
+
 
